fix overflow

--- a/superbalist.css
+++ b/superbalist.css
@@ -180,6 +180,7 @@ h1 {
     margin: auto;
 }
 
+#improve .media,
 #found-shoe .media,
 #how-might-we .media {
     max-width: 620px;
@@ -220,6 +221,7 @@ h1 {
 .step-further {
     margin-bottom: 0.5em;
 }
+
 .current-flow {
     margin-top: 0.5em;
 }
@@ -259,36 +261,47 @@ h1 {
     max-height: 500px;
 }
 
+/*********************Further improve the user experience*********************/
+#improve {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+#improve img {
+    border-radius: 5px;
+}
 
-
-
-
-    
-
-
-
-
-
-
-
+/*********************Styling for end section*********************/
+.end-body {
+    max-height: fit-content;
+    margin-top: 1em;
+    border: 2px solid red;
+}
+.end-body h6 {
+    font-size: 4.5rem;
+    color: var(--green);
+    text-align: center;
+}
 
 /***********************************Styling for footer******************************************/
 footer {
+    max-height: fit-content;
+    margin: 1em 0;
+    border: 2px solid green;
+}
+
+.footer {
     text-align: center;
     display: flex;
     gap: 16px;
     flex-direction: column;
     justify-content: center;
-    margin: 1em 0;
+    align-items: center;
+    border: 2px solid red;
 }
 
-.footer {
-    height: 80px;
-    margin-top: 2em;
-}
-
-.footer hr {
+footer hr {
     color: #20202021;
 }
 
